Change containerCinq's margin top to prevent container overlap

--- a/css/styles.css
+++ b/css/styles.css
@@ -161,5 +161,6 @@ input::placeholder {
   margin-left: auto;
   display: block;
   margin-bottom: 20px;
+  margin-top: 60px;
 }
 
